style comments, fix spacing issue on buttons

--- a/src/index.css
+++ b/src/index.css
@@ -106,11 +106,25 @@ h1{
 
 .tweettext{
   text-justify: center;
+  font-size: 15px;
+}
+
+.smalllogosdiv{
+  width: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
 }
 
 .backsvg{
   height: 20px;
   width: 20px;
+}
+
+.font13{
+  font-size: 13px;
+  color: rgb(83, 100, 113);
 }
 
 .tweetuserimg{
@@ -153,6 +167,8 @@ h1{
   border-bottom: 1px solid rgba(0, 0, 0, .1);
   justify-content: space-around;
 }
+
+
 
 .smalllogos{
   height: 19px;
